modal now generates correct image and data for each badge. Fixed bug where same image and data was generating on ALL badges. Layour/alignment of modal still needs work

--- a/css/layout.css
+++ b/css/layout.css
@@ -30,6 +30,11 @@
     height: 90px;
 }
 
+.little-badge {
+    width: 80px;
+    height: 80px;
+}
+
 .body {
     background-image: url("images/waterDroplet.jpg");
     background-repeat: repeat-y;
